# plex-autotagger

./: .env.sample  Cargo.toml  readme.md
src/: autotagger.rs  extract_subtitles.rs  get_st_track.rs  global_vars.rs  interact.rs  main.rs  opensubtitles.rs  task_queue.rs
tmdb-rs/: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md
tmdb-rs/examples/: append_to_response.rs  basic.rs  find_by_imdb_id.rs
tmdb-rs/src/: integration_tests.rs  lib.rs  model.rs
