[package]
name = "plex-autotagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.17", features = ["derive"] }
dialoguer = "0.10.4"
indicatif = "0.17.5"
lazy_static = "1.4.0"
matroska = "0.25.0"
tmdb-async = { path = "./tmdb-rs" }
tokio = { version = "1.29.1", features = ["full"] }
