[package]
name = "tmdb-async"
version = "0.7.0"
edition = "2021"
authors = ["Mike Cronce <mike@quadra-tec.net>"]
description = "The Movie Database (TMDb) API for async Rust"
documentation = "https://docs.rs/crate/tmdb-async"
homepage = "https://gitlab.cronce.io/foss/tmdb-rs"
repository = "https://gitlab.com/foss/tmdb-rs"
readme = "README.md"
license = "MIT"

[dependencies]
cervine = "0.0.6"
compact_str = { version = "0.7.0", features = ["serde"] }
gset = "0.1.0"
isocountry = "0.3.2"
isolanguage-1 = { version = "0.2.2", features = ["serde"] }
itertools = "0.11.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.10", default_features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_with = { version = "3.0.0", features = ["hex"] }
time = { version = "0.3.9", features = ["macros", "serde-human-readable"] }

[dev-dependencies]
hex = "0.4.3"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
